<resources>
    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>
    <string name="app_name">ЖБИ Кольца</string>
    <string name="detail_button">Редактировать состав</string>

    <string name="order_change_date_item">Перенести на другой день…</string>
    <string name="order_change_date_item_title_fmt">%s (перенесен на %s)</string>

    <string name="user_hint">Сменить пользователя…</string>
    <string name="stock_hint">Склад</string>
    <string name="options_hint">Настройки</string>
    <string name="add_hint">Добавление заказа</string>
    <string name="calculate_hint">Расчитать итоги дня</string>
    <string name="open_day_hint">Открыть день</string>
    <string name="lock_day_hint">Закрыть день</string>
    <string name="help_hint">Справка</string>

    <string name="user_edit_hint">Введите имя пользователя</string>
    <string name="order_title_hint">Введите название заказа</string>
    <string name="order_detail_hint">Введите описание заказа</string>
    <string name="user_title">Указанное имя пользователя будет отображено в списке Ваших заявок по составу.</string>
    <string name="user_save_btn">Сохранить</string>
    <string name="add_order_item_btn">Сохранить</string>

    <string name="change_user_name_fmt">Имя пользователя \'%s\' успешно сохранено!</string>
    <string name="order_item_add_success_fmt">Заказ \'%s\' успешно сохранен!</string>

    <string name="receive_notify_switch">Получать уведомления</string>
    <string name="show_archive_items_switch">Показывать списанные заказы</string>

    <string name="clear_data_title">Нажмите на кнопку Очистить для удаления данных о составах заявок.
        Будут удалены все сохраненные заявки кроме тех что сделаны за последние 3 месяца.</string>
    <string name="clear_data_button">Очистить</string>

    <string name="delete_item_ballon">Элемент \'%s\' успешно удален со склада</string>
    <string name="clear_successfull">Очистка данных успешно завершена</string>
    <string name="clear_question">Вы дейстивтельно хотите очистить данные?</string>
    <string name="day_status_change_open">Статус дня успешно обновлен на ОТКРЫТЫЙ</string>
    <string name="day_status_change_close">Статус дня успешно обновлен на ЗАРКЫТЫЙ</string>
    <string name="add_dialog_ok">OK</string>
    <string name="add_dialog_cancel">Отмена</string>
    <string name="add_item_ballon">Элемент \'%s\' успешно добавлен на склад</string>
    <string name="summa_title_of_day">Общая сумма по всем новым заказам за</string>
    <string name="change_order_status_new">Выполнить заказ \'%s\'?</string>
    <string name="change_order_status_execute">Списать заказ \'%s\'?</string>
    <string name="change_order_status_execute_successful">Заказ \'%s\' успешно выполнен</string>
    <string name="change_order_status_archive_successful">Заказ \'%s\' успешно списан</string>
    <string name="copy_order_item_successful">Заказ \'%s\' успешно перенесен на \'%s\'</string>

    <string name="add_item_dialog_title">Введите имя нового элемента и нажмите ОК</string>
    <string name="summa_rings_order_postfix">%d шт.</string>

    <string name="remove_item_dialog_title">Удалить элемент \'%s\'?</string>
    <string name="item_dialog_yes">Да</string>
    <string name="item_dialog_cancel">Отмена</string>

    <string name="wait_dialog">Идет обновление данных… Пожалуйста подождите.</string>

    <string name="help_new_order_title"> - НОВЫЙ ЗАКАЗ</string>
    <string name="help_new_order_description">Можно редактировать. Состав учитывается при расчете итогов дня.</string>
    <string name="help_execute_order_title"> - ВЫПОЛНЕННЫЙ ЗАКАЗ</string>
    <string name="help_execute_order_description">Можно редактировать. Состав не учитывается при расчете итогов дня.</string>
    <string name="help_archive_order_title"> - СПИСАННЫЙ ЗАКАЗ</string>
    <string name="help_archive_order_description">Нельзя редактировать. Состав не учитывается при расчете итогов дня.
        Могут быть исключены из списка при помощи настройки \'Показывать списанные заказы\' </string>
    <string name="help_order_title"> - ДОПОЛНИТЕЛЬНО</string>
    <string name="help_move_order_item_description">\tДля переноса существующего заказа на другой день была добавлена команда
        \'Перенести на другой день…\'. Для ее вызова необходимо выбрать нужный заказ и удерживать на нем палец до появления контекстного меню.
        Переносить можно заказы в состоянии \'НОВЫЙ ЗАКАЗ\' и \'ВЫПОЛНЕННЫЙ ЗАКАЗ\'.
        Искомый заказ переводится в состояние \'СПИСАННЫЙ ЗАКАЗ\', а в
        поле описания добавляется соответствующая пометка о переносе на другой день.</string>

    <string name="author_title">Создал:</string>
    <string name="editor_title">Изменил:</string>
    <string name="create_date_time_title">Дата создания:</string>
    <string name="edit_date_time_title">Дата изменения:</string>

    <string name="default_notification_channel_id">ru.ringsplus.app.notify</string>

    <string name="create_new_order_notify_fmt">Создан новый заказ \'%s\' (%s)</string>
    <string name="edit_order_notify_fmt">Изменен заказ \'%s\' (%s)</string>
    <string name="author_notify_fmt">Автор: %s</string>

    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>

    <string name="material_calendar_sunday">Вс</string>
</resources>