<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_user"
        app:showAsAction="always"
        android:icon="@drawable/change_user"
        android:title="@string/user_hint"/>
    <item
        android:id="@+id/action_stock"
        app:showAsAction="always"
        android:icon="@drawable/stock"
        android:title="@string/stock_hint"/>
    <item
        android:id="@+id/action_options"
        app:showAsAction="always"
        android:icon="@drawable/options"
        android:title="@string/options_hint"/>
    <item
        android:id="@+id/action_refresh"
        app:showAsAction="always"
        android:icon="@drawable/refresh"
        android:title="@string/refresh_hint"/>
</menu>