<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".AddOrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"/>

    <TextView
        android:id="@+id/add_day_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:stateListAnimator="@null">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allRingsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/titleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_margin="8dp"
        android:hint="@string/order_title_hint" />

    <EditText
        android:id="@+id/detailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/order_detail_hint" />

    <Button
        android:id="@+id/orderItemSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textColor="#FFFFFF"
        android:enabled="false"
        android:background="@color/disabledColor"
        android:text="@string/add_order_item_btn" />
</LinearLayout>